test/corpus/comment.txt
========
Comments
========

{{!Comment}}

---

(template
  (comment_statement
    (_start_delimiter)
    (_end_delimiter)))

========
Multiline comments
========

{{!
Multiline
Comment}}

---

(template
  (comment_statement
    (_start_delimiter)
    (_end_delimiter)))

========
Partial end delimiter inside comment
========

{{!
Some text
{
  "some": "json"
}
}}

---

(template
  (comment_statement
    (_start_delimiter)
    (_end_delimiter)))

========
Partial end delimiter inside comment before more text
========

{{!
Some text
{
  "some": "json"
}
Some more text
}}

---

(template
  (comment_statement
    (_start_delimiter)
    (_end_delimiter)))

========
Partial end delimiter overlapping with end delimiter
========

{{!
Some text
{
  "some": "json"
}}}

---

(template
  (comment_statement
    (_start_delimiter)
    (_end_delimiter))
    (text))
