test/corpus/real_world_example.txt
========|||
Real world example
========|||

---
# This file was generated from `meta.yml`, please do not edit manually.
# Follow the instructions on https://github.com/coq-community/templates to regenerate.
title: {{& fullname }}
lang: en
header-includes:
  - |
    <style type="text/css"> body {font-family: Arial, Helvetica; margin-left: 5em; font-size: large;} </style>
    <style type="text/css"> h1 {margin-left: 0em; padding: 0px; text-align: center} </style>
    <style type="text/css"> h2 {margin-left: 0em; padding: 0px; color: #580909} </style>
    <style type="text/css"> h3 {margin-left: 1em; padding: 0px; color: #C05001;} </style>
    <style type="text/css"> body { width: 1100px; margin-left: 30px; }</style>
---

<div style="text-align:left"><img src="https://github.githubassets.com/images/modules/logos_page/Octocat.png" height="25" style="border:0px">
<a href="https://github.com/{{ organization }}/{{ shortname }}">View the project on GitHub</a>
<img src="https://github.githubassets.com/images/modules/logos_page/Octocat.png" height="25" style="border:0px"></div>

## About

Welcome to the {{& fullname }} project website!{{# community }} This project is part of [coq-community](https://github.com/coq-community/manifesto).{{/ community }}

{{& description }}

{{# license }}
This is an open source project, licensed under the {{& fullname }}.
{{/ license }}

## Get the code

The current stable release of {{& fullname }} can be [downloaded from GitHub](https://github.com/{{ organization }}/{{ shortname }}/releases).

## Documentation

{{# coqdoc_index }}
The coqdoc presentation of the source files can be browsed [here]({{ coqdoc_index }})
{{/ coqdoc_index }}

Related publications, if any, are listed below.

{{# publications }}
- [{{& pub_title }}]({{ pub_url }}) {{# pub_doi }}doi:[{{ pub_doi }}](https://doi.org/{{ pub_doi }}){{/ pub_doi}}
{{/ publications }}

## Help and contact

- Report issues on [GitHub](https://github.com/{{ organization }}/{{ shortname }}/issues)
{{# community }}
- Chat with us on [Zulip](https://coq.zulipchat.com/#narrow/stream/237663-coq-community-devs.20.26.20users)
- Discuss with us on Coq's [Discourse](https://coq.discourse.group) forum
{{/ community }}

## Authors and contributors

{{# authors }}
- {{& name }}{{# orcid }} [<img src="https://zenodo.org/static/img/orcid.svg" height="14px" alt="ORCID logo" />](https://orcid.org/{{ orcid }}){{/ orcid }}{{# initial }} (initial){{/ initial }}
{{/ authors }}{{& after_authors }}

{{& index_documentation }}

---|||

(template
  (text)
  (ampersand_statement
    (start_delimiter)
    (identifier)
    (end_delimiter))
  (text)
  (interpolation_statement
    (start_delimiter)
    (identifier)
    (end_delimiter))
  (text)
  (interpolation_statement
    (start_delimiter)
    (identifier)
    (end_delimiter))
  (text)
  (ampersand_statement
    (start_delimiter)
    (identifier)
    (end_delimiter))
  (text)
  (section
    (section_begin
      (start_delimiter)
      (tag_name)
      (end_delimiter))
    (text)
    (section_end
      (start_delimiter)
      (tag_name)
      (end_delimiter)))
  (ampersand_statement
    (start_delimiter)
    (identifier)
    (end_delimiter))
  (section
    (section_begin
      (start_delimiter)
      (tag_name)
      (end_delimiter))
    (text)
    (ampersand_statement
      (start_delimiter)
      (identifier)
      (end_delimiter))
    (text)
    (section_end
      (start_delimiter)
      (tag_name)
      (end_delimiter)))
  (text)
  (ampersand_statement
    (start_delimiter)
    (identifier)
    (end_delimiter))
  (text)
  (interpolation_statement
    (start_delimiter)
    (identifier)
    (end_delimiter))
  (text)
  (interpolation_statement
    (start_delimiter)
    (identifier)
    (end_delimiter))
  (text)
  (section
    (section_begin
      (start_delimiter)
      (tag_name)
      (end_delimiter))
    (text)
    (interpolation_statement
      (start_delimiter)
      (identifier)
      (end_delimiter))
    (text)
    (section_end
      (start_delimiter)
      (tag_name)
      (end_delimiter)))
  (text)
  (section
    (section_begin
      (start_delimiter)
      (tag_name)
      (end_delimiter))
    (text)
    (ampersand_statement
      (start_delimiter)
      (identifier)
      (end_delimiter))
    (text)
    (interpolation_statement
      (start_delimiter)
      (identifier)
      (end_delimiter))
    (text)
    (section
      (section_begin
        (start_delimiter)
        (tag_name)
        (end_delimiter))
      (text)
      (interpolation_statement
        (start_delimiter)
        (identifier)
        (end_delimiter))
      (text)
      (interpolation_statement
        (start_delimiter)
        (identifier)
        (end_delimiter))
      (text)
      (section_end
        (start_delimiter)
        (tag_name)
        (end_delimiter)))
    (section_end
      (start_delimiter)
      (tag_name)
      (end_delimiter)))
  (text)
  (interpolation_statement
    (start_delimiter)
    (identifier)
    (end_delimiter))
  (text)
  (interpolation_statement
    (start_delimiter)
    (identifier)
    (end_delimiter))
  (text)
  (section
    (section_begin
      (start_delimiter)
      (tag_name)
      (end_delimiter))
    (text)
    (section_end
      (start_delimiter)
      (tag_name)
      (end_delimiter)))
  (text)
  (section
    (section_begin
      (start_delimiter)
      (tag_name)
      (end_delimiter))
    (text)
    (ampersand_statement
      (start_delimiter)
      (identifier)
      (end_delimiter))
    (section
      (section_begin
        (start_delimiter)
        (tag_name)
        (end_delimiter))
      (text)
      (interpolation_statement
        (start_delimiter)
        (identifier)
        (end_delimiter))
      (text)
      (section_end
        (start_delimiter)
        (tag_name)
        (end_delimiter)))
    (section
      (section_begin
        (start_delimiter)
        (tag_name)
        (end_delimiter))
      (text)
      (section_end
        (start_delimiter)
        (tag_name)
        (end_delimiter)))
    (section_end
      (start_delimiter)
      (tag_name)
      (end_delimiter)))
  (ampersand_statement
    (start_delimiter)
    (identifier)
    (end_delimiter))
  (ampersand_statement
    (start_delimiter)
    (identifier)
    (end_delimiter)))
